Added in the means to select the port from a list of drop downs Re-added the displaying of x/y values for live data (not just 'saved' data) The x-values now come from the duration calculated between first and last point, then converted to seconds. Some codes changed around.

--- a/src/tabstyle.css
+++ b/src/tabstyle.css
@@ -1,3 +1,4 @@
+/* Styling of an assortment of components (panes, labels, text areas, combo-boxes) */
 #anchorPane
 {
 	-fx-background-color: linear-gradient(#000033, #666699); 
@@ -59,6 +60,10 @@
 	-fx-text-fill: white;
 	
 	-fx-cursor:hand;
+}
+
+.combo-box-popup > .list-view {
+    -fx-pref-width: 300;
 }
 
 .combo-box-popup  > .list-view > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:hover {
