--- a/src/gui_test.fxml
+++ b/src/gui_test.fxml
@@ -26,27 +26,27 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="151.0" prefWidth="151.48019409179688" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="35.0" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="258.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="122.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="168.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="41.0" minHeight="0.0" prefHeight="32.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="258.0" minHeight="10.0" prefHeight="138.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="98.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="312.0" minHeight="10.0" prefHeight="158.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="176.0" minHeight="10.0" prefHeight="155.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <RadioButton fx:id="connRBtn" disable="true" focusTraversable="false" minWidth="120.0" mnemonicParsing="false" onAction="#selectConnected" stylesheets="@buttonstyle.css" text="Connected   " GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <RadioButton fx:id="connRBtn" disable="true" focusTraversable="false" minWidth="120.0" mnemonicParsing="false" onAction="#selectConnected" stylesheets="@buttonstyle.css" text="Connected   " GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets left="25.0" />
+                        <Insets left="25.0" top="10.0" />
                      </GridPane.margin>
                   </RadioButton>
-                  <RadioButton fx:id="disconnRBtn" focusTraversable="false" minWidth="120.0" mnemonicParsing="false" onAction="#selectDisconnected" stylesheets="@buttonstyle.css" text="Disconnected" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <RadioButton fx:id="disconnRBtn" focusTraversable="false" minWidth="120.0" mnemonicParsing="false" onAction="#selectDisconnected" stylesheets="@buttonstyle.css" text="Disconnected" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="TOP">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets left="25.0" />
+                        <Insets left="25.0" top="10.0" />
                      </GridPane.margin>
                   </RadioButton>
                   <Button fx:id="pauseBtn" alignment="TOP_CENTER" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#pauseDataAcquisition" stylesheets="@buttonstyle.css" text="Pause" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
@@ -54,17 +54,17 @@
                         <Insets left="150.0" top="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="saveBtn" alignment="TOP_CENTER" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#saveDataAcquisition" stylesheets="@buttonstyle.css" text="Save Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <Button fx:id="saveBtn" alignment="TOP_CENTER" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#saveDataAcquisition" stylesheets="@buttonstyle.css" text="Save Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <GridPane.margin>
-                        <Insets left="150.0" top="10.0" />
+                        <Insets left="150.0" top="50.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="discardBtn" alignment="TOP_CENTER" contentDisplay="CENTER" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#discardData" text="Discard Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                  <Button fx:id="discardBtn" alignment="TOP_CENTER" contentDisplay="CENTER" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#discardData" text="Discard Data" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <GridPane.margin>
-                        <Insets left="150.0" top="10.0" />
+                        <Insets left="150.0" top="90.0" />
                      </GridPane.margin>
                   </Button>
-                  <Group GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <Group GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
                      <children>
                         <Label fx:id="loadFileLabel" disable="true" focusTraversable="false" text="Load:" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <GridPane.margin>
@@ -78,12 +78,12 @@
                         </Button>
                      </children>
                      <GridPane.margin>
-                        <Insets left="150.0" />
+                        <Insets left="150.0" top="10.0" />
                      </GridPane.margin>
                   </Group>
-                  <Button fx:id="maskTestingBtn" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#editMask" text="Mask-Test" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                  <Button fx:id="maskTestingBtn" disable="true" focusTraversable="false" minWidth="106.0" mnemonicParsing="false" onAction="#editMask" text="Mask-Test" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
                      <GridPane.margin>
-                        <Insets left="150.0" top="90.0" />
+                        <Insets left="150.0" top="65.0" />
                      </GridPane.margin>
                   </Button>
                   <Line fx:id="separatorLine" endX="274.0" startX="1.0" stroke="#666699" strokeWidth="2.0" visible="false" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
@@ -137,9 +137,9 @@
                         <Insets bottom="1.0" left="25.0" right="25.0" top="50.0" />
                      </GridPane.margin>
                   </TextArea>
-                  <ComboBox fx:id="sampleRate" disable="true" onAction="#selectSampleRate" prefHeight="28.0" prefWidth="127.0" promptText="Sample Rate" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="BOTTOM">
+                  <ComboBox fx:id="sampleRate" disable="true" onAction="#selectSampleRate" prefHeight="28.0" prefWidth="130.0" promptText="Sample Rate" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <GridPane.margin>
-                        <Insets left="25.0" />
+                        <Insets left="25.0" top="110.0" />
                      </GridPane.margin></ComboBox>
                   <Group GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="TOP">
                      <children>
@@ -151,6 +151,22 @@
                         <Insets />
                      </GridPane.margin>
                   </Group>
+                  <ComboBox fx:id="portsAvailable" onAction="#changePorts" prefHeight="27.0" prefWidth="130.0" promptText="Ports" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="25.0" top="40.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <Button fx:id="refreshBtn" minWidth="106.0" mnemonicParsing="false" onAction="#refreshPorts" stylesheets="@../../TP1/Weather%20App/src/buttonstyle.css" text="Refresh" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="25.0" top="70.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
             </GridPane>
          </children>
@@ -202,7 +218,10 @@
                   <TextArea fx:id="multimeterDisplay" disable="true" editable="false" focusTraversable="false" prefHeight="200.0" prefWidth="200.0" stylesheets="@tabstyle.css" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="25.0" />
-                     </GridPane.margin></TextArea>
+                     </GridPane.margin>
+                     <font>
+                        <Font size="12.0" />
+                     </font></TextArea>
                   <RadioButton fx:id="dcRBtn" disable="true" mnemonicParsing="false" onAction="#switchACDC" text="DC" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets left="28.0" />
