--- a/src/redesigned_gui.fxml
+++ b/src/redesigned_gui.fxml
@@ -16,7 +16,7 @@
    <children>
       <TabPane id="options" fx:id="modeOptions" layoutX="5.0" layoutY="5.0" prefHeight="592.0" prefWidth="319.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Connected">
+          <Tab fx:id="connectedTab" text="Connected">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -49,7 +49,7 @@
                                     <Insets bottom="5.0" left="10.0" top="35.0" />
                                  </GridPane.margin>
                               </ComboBox>
-                              <Label id="anchorPaneHeadings" fx:id="dataSource11" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Connection Options" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Connection Options" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -67,17 +67,17 @@
                                     <Insets left="10.0" top="10.0" />
                                  </GridPane.margin>
                               </ComboBox>
-                              <Label id="anchorPaneHeadings" fx:id="multimeter" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" text="  Multimeter" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" text="  Multimeter" GridPane.rowIndex="2" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextArea fx:id="multimeterDisplay" disable="true" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="239.0" stylesheets="@tabstyle.css" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                              <TextArea fx:id="multimeterDisplay" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" prefWidth="239.0" stylesheets="@tabstyle.css" GridPane.rowIndex="3" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets bottom="10.0" left="40.0" right="40.0" top="50.0" />
                                  </GridPane.margin>
                                  <font>
-                                    <Font size="20.0" />
+                                    <Font size="15.0" />
                                  </font>
                               </TextArea>
                               <Button fx:id="resistanceBtn" disable="true" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#measureResistance" prefHeight="28.0" prefWidth="96.0" text="Ω" GridPane.rowIndex="4" GridPane.valignment="TOP">
@@ -120,7 +120,7 @@
                                     <Insets left="65.0" top="15.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Label id="anchorPaneHeadings" fx:id="dataSource1" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Data Options" GridPane.rowIndex="7" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Data Options" GridPane.rowIndex="7" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -146,7 +146,7 @@
                   </AnchorPane>
             </content>
           </Tab>
-          <Tab text="Disconnected">
+          <Tab fx:id="disconnectedTab" text="Disconnected">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -182,7 +182,7 @@
                                     <Insets left="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Label id="anchorPaneHeadings" fx:id="dataSource" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Data Options" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Data Options" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -192,17 +192,17 @@
                                     <Insets left="54.0" top="25.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Label fx:id="loadFileLabel" focusTraversable="false" text="Load:" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                              <Label focusTraversable="false" text="Load:" GridPane.rowIndex="1" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets left="10.0" top="10.0" />
                                  </GridPane.margin>
                               </Label>
-                              <Label id="anchorPaneHeadings" fx:id="dataSource2" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Mask Options" GridPane.rowIndex="2" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Mask Options" GridPane.rowIndex="2" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="createMaskLabel" focusTraversable="false" text="Create Mask:" GridPane.rowIndex="3" GridPane.valignment="TOP">
+                              <Label focusTraversable="false" text="Create Mask:" GridPane.rowIndex="3" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets left="10.0" top="10.0" />
                                  </GridPane.margin>
@@ -227,17 +227,17 @@
                                     <Insets left="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="28.0" prefWidth="110.0" text="Discard All" GridPane.rowIndex="6" GridPane.valignment="TOP">
+                              <Button fx:id="discardAllBtn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#discardAll" prefHeight="28.0" prefWidth="110.0" text="Discard All" GridPane.rowIndex="6" GridPane.valignment="TOP">
                                  <GridPane.margin>
                                     <Insets left="10.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Label id="anchorPaneHeadings" fx:id="dataSource21" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Mask Test Results" GridPane.rowIndex="7" GridPane.valignment="TOP">
+                              <Label id="anchorPaneHeadings" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="319.0" stylesheets="@tabstyle.css" text="  Mask Test Results" GridPane.rowIndex="7" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextArea fx:id="maskTestResults" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="71.0" prefWidth="309.0" GridPane.rowIndex="9" GridPane.valignment="TOP">
+                              <TextArea fx:id="maskTestResults" disable="true" editable="false" focusTraversable="false" minHeight="-Infinity" minWidth="-Infinity" prefHeight="71.0" prefWidth="309.0" GridPane.rowIndex="9" GridPane.valignment="TOP">
                                  <font>
                                     <Font size="10.0" />
                                  </font>
